Fix uneven sections

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 #hero-sect{
-    padding: 50px 0 40px 0;
+    padding: 100px 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
